@@ -5,7 +5,7 @@
         This web application does not send or store any personal information.
     </p>
     <p>
-        All the datas about the current game is stored on the web browser.
+        All the datas about the current game are stored on the web browser.
     </p>
 
 </div>
