@@ -96,8 +96,10 @@
  - Fixed bug with Curing +20EP button: You were allowed to use if you were dead
 
 1.13
+ - Book 15 available
+ - Kai Chronicles is now English only
  - Remove all android related code
  - Various components updates
- - Based on latest git data (instead of no longer maintained SVN)
- - English only
+ - Based on latest git data (instead of no longer maintained SVN data)
+ - IE is no more supported
  
